[tool.poetry]
name = "ruamel_fmt"
version = "0.0.2"
description = "Format YAML documents, for humans to read"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.18.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
neovim = "^0.3.1"

[tool.poetry.scripts]
ruamel-fmt = "ruamel_fmt:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
