[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ruamel_fmt"
version = "0.0.2"
description = "Format YAML documents, for humans to read"
authors = [
  {name = "Philipp Schmitt", email = "philipp@schmitt.co"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["yaml", "formatting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
  "ruamel.yaml <= 0.18.16; platform_machine == 'aarch64'",
  "ruamel.yaml; platform_machine != 'aarch64'"
]

[project.optional-dependencies]
dev = [
  "ipython>=8.5.0",
  "neovim>=0.3.1",
]

[project.scripts]
ruamel-fmt = "ruamel_fmt:main"
